--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require videojs/video-js
+ *= require typeahead/typeahead
  *= require main
  *= require_self
  *= require_tree .
@@ -19,3 +20,4 @@ $navbar-default-bg: green;
 $navbar-default-link-color: white;
 $navbar-default-link-hover-color: lightgrey;
 @import "bootstrap";
+@import "bootstrap/theme"
