--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -15,13 +15,13 @@
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
           <a href="#">Search</a>
         </li>
         <li>
-          <a href="#">Add Media</a>
+          <a href="#/add">Add Media</a>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
