--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -18,7 +18,7 @@
           <a href="/">Home</a>
         </li>
         <li>
-          <a href="#">Search</a>
+          <a href="#/search">Search</a>
         </li>
         <li>
           <a href="#/add">Add Media</a>
