made models and migration

--- a/app/views/tag_instances/_form.html.erb
+++ b/app/views/tag_instances/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :timestamp %><br>
-    <%= f.text_field :timestamp %>
+    <%= f.number_field :timestamp %>
   </div>
   <div class="actions">
     <%= f.submit %>
