--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -13,7 +13,8 @@
 
   <div class="field">
     <%= f.label :label %><br>
-    <%= f.text_field :label %>
+    <%= f.text_field :label %
+    
   </div>
   <div class="actions">
     <%= f.submit %>
