--- a/app/views/tag_instances/_form.html.erb
+++ b/app/views/tag_instances/_form.html.erb
@@ -15,6 +15,14 @@
     <%= f.label :timestamp %><br>
     <%= f.number_field :timestamp %>
   </div>
+  <div class="field">
+    <%= f.label :media_id %><br>
+    <%= f.number_field :media_id %>
+  </div>
+  <div class="field">
+    <%= f.label :tags_id %><br>
+    <%= f.number_field :tags_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
