--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -19,6 +19,7 @@
         <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <%= @tags.getAll()%>
   </tbody>
 </table>
 
