--- a/app/views/media/_form.html.erb
+++ b/app/views/media/_form.html.erb
@@ -22,6 +22,10 @@
   <div class="field">
     <%= f.label :creationtime %><br>
     <%= f.datetime_select :creationtime %>
+  </div>  
+  <div class="field">
+    <%= f.label :media_type_id %><br>
+    <%= f.text_field :media_type_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
