--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -21,7 +21,7 @@
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="media in media_elements">
           <p>
-            Title: {{media.title}}
+            Title: <a>{{media.title}}</a>
           </p>
           <p>
             Type: {{media.media_type}}
