--- a/app/assets/templates/addMedia.html
+++ b/app/assets/templates/addMedia.html
@@ -53,7 +53,7 @@
         <th>Options</th>
       </tr>
       <tr ng-repeat="tag in tags">
-        <td>{{tag.label}}</td>
+        <td>{{tag.name}}</td>
         <td ng-if="isVideo() && mediaLoaded"><a href="javascript:void(0)" ng-click="goTo(tag.time)">{{tag.time}}</a></td>
         <td>
         <button class="btn btn-danger" ng-click="deleteTag(tag)">
