--- a/app/assets/templates/404.html
+++ b/app/assets/templates/404.html
@@ -1,3 +1,5 @@
+<!-- Template for Invalid Routes -->
+<!-- Author: Christopher Foo -->
 <div class="container">
   <h1>Four Oh Four!  The page you are looking for does not exist!</h1>
 </div>
