--- a/app/assets/templates/addMedia.html
+++ b/app/assets/templates/addMedia.html
@@ -50,7 +50,7 @@
 
     <!-- Video Player -->
     <div id="video-row" class="row" ng-class="{hidden: !mediaLoaded}">
-      <video id="vid1" src="" class="video-js vjs-default-skin center-block" controls preload="auto" width="640" height="360" data-fake-attr></video>
+      <video id="vid1" src="" class="video-js vjs-default-skin center-block" controls preload="auto" width="640" height="360"></video>
     </div>
 
     <!-- New Tag Field -->
