--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -30,7 +30,8 @@
             Created At: {{convertDate(media.creation_date)}}
           </p>
           <p>
-            Description: {{media.desc}}
+            Description: <br />
+            {{media.description}}
           </p>
         </li>
       </ul>
