--- a/app/assets/templates/addMedia.html
+++ b/app/assets/templates/addMedia.html
@@ -83,7 +83,7 @@
     </table>
 
     <!-- Submit Button -->
-    <div class="row">
+    <div class="row last-row">
       <div class="alert" ng-if="submitStatus" ng-class="{'alert-success': submitStatus.indexOf('Success') != -1, 'alert-info': submitStatus.indexOf('Working') != -1, 'alert-danger': submitStatus.indexOf('Error') != -1}">
         {{submitStatus}}
       </div>
