--- a/app/assets/templates/search.html
+++ b/app/assets/templates/search.html
@@ -5,7 +5,7 @@
   
   <!-- Loading Message -->
   <div ng-if="loading">
-    Loading...
+    <h1>Loading...</h1>
   </div>
   
   <!-- Search Form / Feed -->
@@ -36,19 +36,21 @@
     <!-- Results Feed -->
     <div id="feed">
       <h2>Matches ({{media_elements.length}})</h2>
-      <ul class="list-group">
-        <li class="list-group-item" ng-repeat="media in media_elements">
+      <h3 ng-if="loadingFeed">Loading...</h3>
+      <ul class="list-group" ng-if="!loadingFeed">
+        <li class="list-group-item feed" ng-repeat="media in media_elements">
           <p>
-            Title: <a>{{media.title}}</a>
+            Title: <a href="#/media/{{media.id}}">{{media.title}}</a>
           </p>
           <p>
             Type: {{media.media_type}}
           </p>
           <p>
-            Created At: {{convertDate(media.creation_date)}}
+            Created At: {{convertDate(media.created_at)}}
           </p>
           <p>
-            Description: {{media.desc}}
+            Description: <br />
+            {{media.description}}
           </p>
         </li>
       </ul>
