Commenting and repo clean up.

--- a/app/assets/javascripts/main.js.coffee.erb
+++ b/app/assets/javascripts/main.js.coffee.erb
@@ -1,6 +1,9 @@
-# Place all the behaviors and hooks related to the matching controller here.
-# All this logic will automatically be available in application.js.
-# You can use CoffeeScript in this file: http://coffeescript.org/
+#
+# main.js.coffee.erb
+#
+# Author: Christopher Foo
+#
+# The routing for the main application module.
 
 @uhbandApp = angular.module('uhband', ['ngRoute', 'AddControllers', 'HomeControllers', 'SearchControllers', 'ViewControllers', 'TypeaheadDirective'])
 
