--- a/app/assets/partials/video-partial.html
+++ b/app/assets/partials/video-partial.html
@@ -1,1 +1,2 @@
+<!-- Partial used to load the video player via jQuery -->
 <video id="vid1" src="" class="video-js vjs-default-skin center-block" controls preload="auto" width="640" height="360"></video>
