--- a/app/assets/javascripts/controllers/addCtrl.js.coffee.erb
+++ b/app/assets/javascripts/controllers/addCtrl.js.coffee.erb
@@ -50,7 +50,7 @@
 
   # Creates a new tag
   $scope.makeTag = ->
-    if $scope.isVideo()
+    if $scope.isVideo() && $scope.mediaLoaded
       videojs.pause();
       
     $scope.tags.push({
